# ------------------------------------------------------------------------------
# include source and test directories
# ------------------------------------------------------------------------------
add_subdirectory(core)
# ------------------------------------------------------------------------------
# apps
# ------------------------------------------------------------------------------
if (BUILD_APPS)
  add_subdirectory(hurl)
  add_subdirectory(phurl)
endif()
